--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,48 @@
+/* Quando quero unidade de medida fixa, pode utilizar o "px", independente da responsividade */
 body{
     margin: 0;
+    font-family: sans-serif;
 }
 
 .grid{
     display: grid;
-    grid-template-areas: 
-    "header header header header header";
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, minmax(30px, auto));
+    grid-template-areas: 
+    "header header header header header"
+    "sidebar sidebar sidebar sidebar sidebar"
+    "main main main main main";
 }
 
 header nav a{
     text-decoration: none;
+    color: #77332A;
+    font-size: 18pt;
+    text-decoration: none;
+    margin: 2px 12px;
+}
+
+header nav a:hover{
+    border-style: dotted;
+    border-width: 0 0 4px 0; 
 }
 
 header{
     align-items: center;
+    background-color: #F08916;
     display: flex;
     grid-area: header;
     justify-content: space-between;
-    padding: 0 10px;
+    padding: 0 50px;
+    margin: 0 0 20px 0;
 }
 
 header nav{
-    display: none;f;
+    display: none;
 }
 
 header nav a:nth-child(1){
-    font-size: 18pt;
+    font-size: 22pt;
 }
 
 /* removendo o cursor: pointer e o width: 30px é o alinhamento perfeito no centro da tela */
@@ -49,13 +64,104 @@ header nav a:nth-child(1){
     width: 100%;
 }
 
+.sidebar{
+    background-color: #77332A;
+    grid-area: sidebar;
+    padding: 30px 0;  
+}
+
+.sidebar nav{
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.sidebar nav a{
+    color: #F08916;
+    text-decoration: none;
+    margin: 2px 0;
+}
+
+.sidebar nav a:hover{
+    border-style: dotted;
+    border-width: 0 0 4px 0; 
+}
+
+main{
+    grid-area: main;
+}
+
+.texto{
+    grid-area: texto
+}
+.texto h2{
+    grid-area: texto
+}
+.texto p{
+    font-size: 20px
+}
+
+.imagem{
+    grid-area: imagem
+}
 /* Media Query */
-@media(min-width: 900px){
+
+/* Breakpoint para tablet */
+@media(min-width: 768px){
     header nav{
         display: block;
     }
     
     .menu-hamburguer{
         display: none;
+    }
+}
+
+/* Breakpoint para Notebooks pequenos */
+@media(min-width: 992px){
+    .grid{
+        grid-template-areas: 
+        "header header header header header"
+        "main main main main sidebar"
+        "main main main main  .";
+    }
+
+    .sidebar{
+        border-radius: 15px;
+        margin: 5px;
+        box-shadow: 1px 1px 15px 2px rgba(0, 0, 0, 0.2);
+    }
+
+    .sidebar nav{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    main{
+        display: flex;
+    }
+
+    img{
+        width: 520px;
+        margin: 0 30px;
+    }
+
+    h2{
+        margin: 0 10px;
+        color: #F05B16;
+        font-size: 29pt;
+    }
+
+    p{
+        margin: 90px 10px;
+        text-align: justify;
+    }
+}
+
+/* Breakpoint para Notebooks grandes e Desktop */
+@media(min-width: 1200px){
+    main{
+        max-width: 1200px;
+        margin: auto;
     }
 }
